# enterprise-cron

./: .dockerignore  .envrc  .gitignore  API_TEST_COMMANDS.md  CLAUDE.md  CONSOLIDATED-MINIO-REMOVAL.md  CONSOLIDATED-REFACTORING.md  CONSOLIDATED-TESTING.md  Cargo.toml  DEBUG-NAVIGATION.md  DEBUG_LOGIN.md  DEPLOYMENT.md  DEVELOPMENT-RULES.md  Dockerfile  EXECUTION-RESULT-ENHANCEMENT.md  FINAL-FIX-INSTRUCTIONS.md  INVESTIGATION-JOB-DETAILS-NAV.md  JOB-EXECUTION-FLOW.md  LOCAL-DEVELOPMENT.md  MINIO-HTTPS-SETUP.md  Makefile  NAVIGATION-TEST-CHECKLIST.md  PAGINATION-NAVIGATION-FIX-SUMMARY.md  QUICK_START_API_TESTING.md  README-MACOS.md  README.md  REBUILD-AND-TEST.md  RECC-2025-QUICK-REFERENCE.md  REFACTORING-BEST-PRACTICES.md  REFACTORING-COMPLETE.md  REFACTORING-SUMMARY.md  RUST-TO-GOLANG-FEASIBILITY-ANALYSIS.md  STOP-JOB-IMPLEMENTATION.md  TASK-19.3-IMPLEMENTATION.md  TASK-19.4-IMPLEMENTATION.md  TASK-19.5-IMPLEMENTATION.md  TASK-19.6-IMPLEMENTATION.md  TASK-25-IMPLEMENTATION.md  TASK-26-IMPLEMENTATION.md  TASK-26.3-IMPLEMENTATION.md  (+20 more)
.cargo/: config.toml
.claude/: settings.local.json
.sqlx/: query-3ef125eb8a9c189c42ea98ee20c68093685cee59bc228c4a6e314eec6d3062f8.json  query-441066f8a18c363067ad4110176e40bd1792b0fe84940829de1ba2561fe7c868.json  query-4f04faae6f0a6c8b6e93820efb385dd358824b76df1f202df94bb3c6b6567d66.json  query-7490d2882da2f5c9dc0bc4e72c38516dbea6f7fa9a6b598bcaed5aef52d244ef.json  query-78ff5c4b38af9d8e632dc9e0fef2b1c7f44bc01e4b62056bc4b996a28e79d73b.json  query-8aa613c6d256746177dae232c8943630225731fedfaed40602e1c39d65cb6aac.json  query-b64dd989d19ea0267f494bff85a049d3879accb54b73b113b6d83b0be3aac17c.json  query-bce3d572cac81f94c5472e8dbe0881c50cc706c8a0e0dc04c9a98e379af9a718.json  query-c729c6416807dd21ca6b4cb2c931a349ac23873132ea2a90fbdaf68d3e410159.json  query-c9df40f7c9626a23375a5899445c26f9f44076204df437248b7169762cc0915e.json  query-e791ff29cff57de9048a9e36c5181155c6de88066c9d9dc3ad80bdebc34c3902.json
api/: Cargo.toml
api/src/: main.rs  routes.rs  state.rs  templates.rs
api/src/handlers/: auth.rs  dashboard.rs  executions.rs  health.rs  import_export.rs  index.rs  jobs.rs  login.rs  metrics.rs  mod.rs  sse.rs  users.rs  variables.rs  webhooks.rs
api/src/handlers/dashboard/: executions_list.rs  job_details.rs  job_form.rs  jobs_list.rs  mod.rs  shared_utils.rs  stats.rs  variables_list.rs
api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs
api/templates/: README.md  _dashboard_content.html  _execution_details_modal_content.html  _executions_content.html  _job_details_content.html  _job_details_modal_content.html  _jobs_content.html  _variables_content.html  dashboard.html  executions.html  job_details.html  job_form.html  jobs.html  layout.html  variables.html
api/templates/partials/: _empty_state.html  _execution_table.html  _job_details_modal.html  _job_import_modal.html  _job_table.html  _job_type_badge.html  _modal_styles.html  _stat_card.html  _status_badge.html  _success_rate_badge.html  _trigger_source_badge.html
api/tests/: api_property_tests.rs  import_export_property_tests.rs
bruno-collection/: List Jobs.bru  Login Admin.bru  bruno.json
common/: Cargo.toml
common/examples/: debug_executions.rs  fix_stuck_job.rs  requeue_stuck_jobs.rs
common/src/: auth.rs  bootstrap.rs  circuit_breaker.rs  config.rs  dlq.rs  errors.rs  import_export.rs  lib.rs  lock.rs  middleware.rs  models.rs  rate_limit.rs  retry.rs  schedule.rs  substitution.rs  telemetry.rs  webhook.rs
common/src/db/: mod.rs  pool.rs  redis.rs
common/src/db/repositories/: execution.rs  job.rs  mod.rs  queries.rs  user.rs  variable.rs  webhook.rs
common/src/executor/: database.rs  file.rs  http.rs  mod.rs  sftp.rs  sftp.rs.old
common/src/executor/database/: mod.rs  mysql.rs  oracle.rs  postgresql.rs
common/src/executor/file/: csv.rs  excel.rs  mod.rs  transformations.rs
common/src/executor/sftp/: auth.rs  connection.rs  mod.rs  operations.rs
common/src/queue/: consumer.rs  mod.rs  nats.rs  publisher.rs
common/src/scheduler/: engine.rs  mod.rs
common/src/storage/: minio.rs  mod.rs  postgres_storage.rs  redis_client.rs  service.rs
common/src/substitution/: database.rs  http.rs
common/src/worker/: consumer.rs  context.rs  mod.rs  reference.rs
common/src/worker/consumer/: circuit_breaker_manager.rs  job_processor.rs  mod.rs  step_executor.rs
common/tests/: FILE_PROCESSING_TESTS_README.md  auth_property_tests.proptest-regressions  auth_property_tests.rs  authorization_property_tests.rs  database_executor_property_tests.proptest-regressions  database_executor_property_tests.rs  deployment_property_tests.rs  file_processing_property_tests.proptest-regressions  file_processing_property_tests.rs  http_executor_property_tests.proptest-regressions  http_executor_property_tests.rs  job_context_property_tests.rs  minio_property_tests.rs  observability_property_tests.rs  property_tests.proptest-regressions  property_tests.rs  queue_property_tests.rs  reference_resolver_property_tests.proptest-regressions  reference_resolver_property_tests.rs  retry_circuit_breaker_property_tests.proptest-regressions  retry_circuit_breaker_property_tests.rs  sftp_property_tests.rs  webhook_property_tests.rs
config/: default.toml  local.toml.example  prometheus.yml
cron-bruno/: bruno.json  login.bru
examples/: README.md  job-complex-workflow.json  job-csv-processing-pipeline.json  job-database-query.json  job-file-processing.json  job-http-database-multistep.json  job-http-simple-correct.json  job-http-simple.json  job-multi-step.json  job-sftp-bidirectional.json  job-sftp-download.json  job-sftp-upload.json  job-webhook-advanced.json  job-webhook-trigger.json
integration-tests/: Cargo.toml  README.md
integration-tests/tests/: integration_tests.rs
migrations/: 20250101000001_create_jobs_table.sql  20250101000002_create_job_executions_table.sql  (+9 more)
scheduler/: Cargo.toml
scheduler/src/: main.rs
scheduler/tests/: scheduler_property_tests.rs
worker/: Cargo.toml
worker/src/: main.rs
worker/tests/: multi_step_property_tests.rs  worker_property_tests.rs
(+71 files in other folders)
