[workspace]
members = ["common", "scheduler", "worker", "api", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vietnam Enterprise Team"]
license = "MIT"
rust-version = "1.84"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# Web & API
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
tera = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
time = "0.3"

# Data storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.35"

# Database drivers
mysql_async = "0.34"
oracle = "0.6"

# File processing
calamine = "0.24"
rust_xlsxwriter = "0.65"
csv = "1.3"

# SFTP & SSH
ssh2 = "0.9"

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }
cron = "0.12"

# Authentication & security
jsonwebtoken = "9.3"
bcrypt = "0.15"
hmac = "0.12"
sha2 = "0.10"

# JSON & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: serde_json_path will be added later when needed for JSONPath support

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.15"
metrics = "0.22"
metrics-exporter-prometheus = "0.15"

# Configuration
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Regex
regex = "1.10"

# Random number generation
rand = "0.8"

# Lazy static initialization
lazy_static = "1.4"

# Testing
proptest = "1.4"
mockall = "0.12"
testcontainers = "0.17"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
