[package]
name = "scheduler"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
# Local dependencies
common = { path = "../common" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
sqlx.workspace = true
redis.workspace = true
async-nats.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
testcontainers.workspace = true
