[package]
name = "worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
# Local dependencies
common = { path = "../common" }

# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
sqlx.workspace = true
redis.workspace = true
async-nats.workspace = true
mysql_async.workspace = true
oracle.workspace = true
calamine.workspace = true
rust_xlsxwriter.workspace = true
csv.workspace = true
ssh2.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
testcontainers.workspace = true
